--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -60,6 +60,10 @@
   name = "github.com/gorilla/handlers"
   version = "1.4.2"
 
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.2.0"
+
 [prune]
   go-tests = true
   unused-packages = true
