--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -68,6 +68,14 @@
   name = "github.com/golang-migrate/migrate"
   version = "3.4.0"
 
+[[constraint]]
+  name = "gopkg.in/go-playground/validator.v9"
+  version = "9.29.1"
+
+[[constraint]]
+  name = "github.com/stretchr/testify"
+  version = "1.4.0"
+
 [prune]
   go-tests = true
   unused-packages = true
